--- a/example.ipynb
+++ b/example.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -9,7 +10,8 @@
    },
    "source": [
     "# LifetimeFit\n",
-    "\n"
+    "\n",
+    "### Author: Till Leissner (till@mci.sdu.dk)\n"
    ]
   },
   {
